v1.0.0/modules/schema/pages/enumeration/ShuntImpedanceLocalControlKind.adoc
= `ShuntImpedanceLocalControlKind`
:toclevels: 4


+++Kind of local control for shunt impedance.+++


[cols="h,3",width=65%]
|===
| Type
| Enumeration

| URI
| `cim:ShuntImpedanceLocalControlKind`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Values

[cols="1,1,5",width=100%]
|===
| Value | URI | Description

| `current`
| `cim:ShuntImpedanceLocalControlKind.current`
| n/a

| `none`
| `cim:ShuntImpedanceLocalControlKind.none`
| n/a

| `powerFactor`
| `cim:ShuntImpedanceLocalControlKind.powerFactor`
| n/a

| `reactivePower`
| `cim:ShuntImpedanceLocalControlKind.reactivePower`
| n/a

| `temperature`
| `cim:ShuntImpedanceLocalControlKind.temperature`
| n/a

| `time`
| `cim:ShuntImpedanceLocalControlKind.time`
| n/a

| `voltage`
| `cim:ShuntImpedanceLocalControlKind.voltage`
| n/a
|===